Notebookbar: Improve shortcuts and fix top bar layout on tablet
- Desktop:
  - Shortcuts is now centered
  - Avoid setting hard min width for document title
- Tablet: Better presentation when on read only mode
  - Document name is now fully visible using all available space
  - Fix layout when on using tablet in portrait
  - When editing:
    - All top elements are now vertically centered
    - Document name uses better the available space
- Tablet: document-name-input: Fix shadow on iOS
  - Safari was overriding it with its own styles
- Generic:
  - Document name: do not use ellipsis if the text fits

when porting this please be sure that 81a5d029e was reverted first

--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -73,6 +73,8 @@
 	display: inline-block;
 	position: relative;
 	z-index: 1000;
+	height: 100%;
+	box-sizing: border-box;
 }
 
 .notebookbar-shortcuts-bar > table {
