--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -228,6 +228,8 @@ w2ui-toolbar {
 
 #document-name-input.editable {
 	border: none;
+	-webkit-appearance: none;
+	-webkit-box-shadow: 0 0 0.1px 1px #ebebeb, 0 0 2px 1px #f0f0f0;
 	box-shadow: 0 0 0.1px 1px #ebebeb, 0 0 2px 1px #f0f0f0;
 	padding-right: 24px;
 	max-width: 100%;
